Bug 91876 - [SKL EDP] DP Aux A is not working without first disabling DC6
Summary: [SKL EDP] DP Aux A is not working without first disabling DC6
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 92037 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-04 13:07 UTC by Patrik Jakobsson
Modified: 2017-07-24 22:45 UTC (History)
2 users (show)

See Also:
i915 platform: SKL
i915 features: display/eDP


Attachments
dmesg (201.37 KB, text/plain)
2015-09-04 13:07 UTC, Patrik Jakobsson
no flags Details

Description Patrik Jakobsson 2015-09-04 13:07:03 UTC
Created attachment 118078 [details]
dmesg

DP Aux A is not working without first disabling DC6. Not really a regression but since commit a7f749f9c7e8222405740f6081bd183137d1d6f2 the DMC is working and we can enter DC states which made this bug visible. The result is that modesetting takes a few seconds but still succeeds.

We get a few of these:
[drm:intel_dp_aux_ch [i915]] *ERROR* dp aux hw did not signal timeout (has irq: 1)!

Before finally giving up with:
[drm:intel_dp_aux_ch [i915]] *ERROR* dp_aux_ch not done status 0xad40001f

I'm currently writing code to allow for power domain get/put to disable/enable dc states for platform restrictions.
Comment 1 Patrik Jakobsson 2015-09-11 11:59:05 UTC
Submitted an RFC patch to address this issue
http://lists.freedesktop.org/archives/intel-gfx/2015-September/075691.html
Comment 2 Timo Aaltonen 2015-09-19 06:20:01 UTC
*** Bug 92037 has been marked as a duplicate of this bug. ***
Comment 3 Patrik Jakobsson 2015-11-04 09:48:06 UTC
DC6 is currently disabled at runtime so this issue no longer exists. DC6 will be re-enabled but at that point we'll have a power well for "DC off" which Aux A will grab.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.