drm/i915/skl: Add DC5/DC6 disabling as power wells

We need to be able to control if DC5/DC6 is allowed or not. Much like
requesting power to a specific piece of the hardware we need to be able
to request that we don't enter certain states during certain hw accesses.

In this particular case we must prevent DC6 whenever accessing DP AUX A.

To solve this without introducing too much infrastructure I'm hooking
into the power well / power domain framework. DC prevention is modeled
much like an enabled power well. Thus I'm using the terminology on/off
for DC states instead of enable/disable.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=91876
Signed-off-by: Patrik Jakobsson <patrik.jakobsson@linux.intel.com>