drivers/gpu/drm/i915/intel_runtime_pm.c
@@ -49,9 +49,6 @@
  * present for a given platform.
  */
 
-#define GEN9_ENABLE_DC5(dev) 0
-#define SKL_ENABLE_DC6(dev) IS_SKYLAKE(dev)
-
 #define for_each_power_well(i, power_well, domain_mask, power_domains)	\
 	for (i = 0;							\
 	     i < (power_domains)->power_well_count &&			\
@@ -335,6 +332,12 @@ static void hsw_set_power_well(struct drm_i915_private *dev_priv,
 	SKL_DISPLAY_POWERWELL_1_POWER_DOMAINS |		\
 	BIT(POWER_DOMAIN_PLLS) |			\
 	BIT(POWER_DOMAIN_INIT))
+#define SKL_DISPLAY_DC5_OFF_POWER_DOMAINS (		\
+	BIT(POWER_DOMAIN_INIT))
+#define SKL_DISPLAY_DC6_OFF_POWER_DOMAINS (		\
+	SKL_DISPLAY_POWERWELL_2_POWER_DOMAINS |		\
+	BIT(POWER_DOMAIN_AUX_A) |			\
+	BIT(POWER_DOMAIN_INIT))
 #define SKL_DISPLAY_ALWAYS_ON_POWER_DOMAINS (		\
 	(POWER_DOMAIN_MASK & ~(SKL_DISPLAY_POWERWELL_1_POWER_DOMAINS |	\
 	SKL_DISPLAY_POWERWELL_2_POWER_DOMAINS |		\
@@ -488,37 +491,6 @@ static void assert_can_disable_dc5(struct drm_i915_private *dev_priv)
 		"Disabling of DC5 while platform is runtime-suspended should never happen.\n");
 }
 
-static void gen9_enable_dc5(struct drm_i915_private *dev_priv)
-{
-	uint32_t val;
-
-	assert_can_enable_dc5(dev_priv);
-
-	DRM_DEBUG_KMS("Enabling DC5\n");
-
-	gen9_set_dc_state_debugmask_memory_up(dev_priv);
-
-	val = I915_READ(DC_STATE_EN);
-	val &= ~DC_STATE_EN_UPTO_DC5_DC6_MASK;
-	val |= DC_STATE_EN_UPTO_DC5;
-	I915_WRITE(DC_STATE_EN, val);
-	POSTING_READ(DC_STATE_EN);
-}
-
-static void gen9_disable_dc5(struct drm_i915_private *dev_priv)
-{
-	uint32_t val;
-
-	assert_can_disable_dc5(dev_priv);
-
-	DRM_DEBUG_KMS("Disabling DC5\n");
-
-	val = I915_READ(DC_STATE_EN);
-	val &= ~DC_STATE_EN_UPTO_DC5;
-	I915_WRITE(DC_STATE_EN, val);
-	POSTING_READ(DC_STATE_EN);
-}
-
 static void assert_can_enable_dc6(struct drm_i915_private *dev_priv)
 {
 	struct drm_device *dev = dev_priv->dev;
@@ -547,33 +519,27 @@ static void assert_can_disable_dc6(struct drm_i915_private *dev_priv)
 		  "DC6 already programmed to be disabled.\n");
 }
 
-static void skl_enable_dc6(struct drm_i915_private *dev_priv)
+void gen9_enable_dc_state(struct drm_i915_private *dev_priv,
+			  uint32_t state)
 {
 	uint32_t val;
-
-	assert_can_enable_dc6(dev_priv);
-
-	DRM_DEBUG_KMS("Enabling DC6\n");
 
 	gen9_set_dc_state_debugmask_memory_up(dev_priv);
 
 	val = I915_READ(DC_STATE_EN);
 	val &= ~DC_STATE_EN_UPTO_DC5_DC6_MASK;
-	val |= DC_STATE_EN_UPTO_DC6;
+	val |= state;
 	I915_WRITE(DC_STATE_EN, val);
 	POSTING_READ(DC_STATE_EN);
 }
 
-static void skl_disable_dc6(struct drm_i915_private *dev_priv)
+void gen9_disable_dc_state(struct drm_i915_private *dev_priv,
+			   uint32_t state)
 {
 	uint32_t val;
 
-	assert_can_disable_dc6(dev_priv);
-
-	DRM_DEBUG_KMS("Disabling DC6\n");
-
 	val = I915_READ(DC_STATE_EN);
-	val &= ~DC_STATE_EN_UPTO_DC6;
+	val &= ~state;
 	I915_WRITE(DC_STATE_EN, val);
 	POSTING_READ(DC_STATE_EN);
 }
@@ -625,10 +591,8 @@ static void skl_set_power_well(struct drm_i915_private *dev_priv,
 				!I915_READ(HSW_PWR_WELL_BIOS),
 				"Invalid for power well status to be enabled, unless done by the BIOS, \
 				when request is to disable!\n");
-			if ((GEN9_ENABLE_DC5(dev) || SKL_ENABLE_DC6(dev)) &&
-				power_well->data == SKL_DISP_PW_2) {
-				if (SKL_ENABLE_DC6(dev)) {
-					skl_disable_dc6(dev_priv);
+			if (power_well->data == SKL_DISP_PW_2) {
+				if (IS_SKYLAKE(dev)) {
 					/*
 					 * DDI buffer programming unnecessary during driver-load/resume
 					 * as it's already done during modeset initialization then.
@@ -636,10 +600,9 @@ static void skl_set_power_well(struct drm_i915_private *dev_priv,
 					 */
 					if (!dev_priv->power_domains.initializing)
 						intel_prepare_ddi(dev);
-				} else {
-					gen9_disable_dc5(dev_priv);
 				}
 			}
+
 			I915_WRITE(HSW_PWR_WELL_DRIVER, tmp | req_mask);
 		}
 
@@ -657,23 +620,18 @@ static void skl_set_power_well(struct drm_i915_private *dev_priv,
 			POSTING_READ(HSW_PWR_WELL_DRIVER);
 			DRM_DEBUG_KMS("Disabling %s\n", power_well->name);
 
-			if ((GEN9_ENABLE_DC5(dev) || SKL_ENABLE_DC6(dev)) &&
-				power_well->data == SKL_DISP_PW_2) {
+			if (power_well->data == SKL_DISP_PW_2) {
 				enum csr_state state;
 				/* TODO: wait for a completion event or
 				 * similar here instead of busy
 				 * waiting using wait_for function.
 				 */
 				wait_for((state = intel_csr_load_status_get(dev_priv)) !=
-						FW_UNINITIALIZED, 1000);
-				if (state != FW_LOADED)
+					 FW_UNINITIALIZED, 1000);
+				if (state != FW_LOADED) {
 					DRM_DEBUG("CSR firmware not ready (%d)\n",
-							state);
-				else
-					if (SKL_ENABLE_DC6(dev))
-						skl_enable_dc6(dev_priv);
-					else
-						gen9_enable_dc5(dev_priv);
+						  state);
+				}
 			}
 		}
 	}
@@ -747,6 +705,50 @@ static void skl_power_well_disable(struct drm_i915_private *dev_priv,
 				struct i915_power_well *power_well)
 {
 	skl_set_power_well(dev_priv, power_well, false);
+}
+
+static bool skl_dc_power_well_enabled(struct drm_i915_private *dev_priv,
+				      struct i915_power_well *power_well)
+{
+	/* Return true if disabling of DC state is enabled */
+	return !(I915_READ(DC_STATE_EN) & power_well->data);
+}
+
+static void skl_dc_power_well_sync_hw(struct drm_i915_private *dev_priv,
+				      struct i915_power_well *power_well)
+{
+	if (power_well->count > 0)
+		gen9_disable_dc_state(dev_priv, power_well->data);
+	else
+		gen9_enable_dc_state(dev_priv, power_well->data);
+}
+
+static void skl_dc5_power_well_on(struct drm_i915_private *dev_priv,
+				  struct i915_power_well *power_well)
+{
+	assert_can_enable_dc5(dev_priv);
+	gen9_enable_dc_state(dev_priv, power_well->data);
+}
+
+static void skl_dc5_power_well_off(struct drm_i915_private *dev_priv,
+				   struct i915_power_well *power_well)
+{
+	assert_can_disable_dc5(dev_priv);
+	gen9_disable_dc_state(dev_priv, power_well->data);
+}
+
+static void skl_dc6_power_well_on(struct drm_i915_private *dev_priv,
+				  struct i915_power_well *power_well)
+{
+	assert_can_enable_dc6(dev_priv);
+	gen9_enable_dc_state(dev_priv, power_well->data);
+}
+
+static void skl_dc6_power_well_off(struct drm_i915_private *dev_priv,
+				   struct i915_power_well *power_well)
+{
+	assert_can_disable_dc6(dev_priv);
+	gen9_disable_dc_state(dev_priv, power_well->data);
 }
 
 static void i9xx_always_on_power_well_noop(struct drm_i915_private *dev_priv,
@@ -1544,6 +1546,22 @@ static const struct i915_power_well_ops skl_power_well_ops = {
 	.is_enabled = skl_power_well_enabled,
 };
 
+static const struct i915_power_well_ops skl_dc5_state_ops = {
+	.sync_hw = skl_dc_power_well_sync_hw,
+	/* To enable power we turn the DC state off */
+	.enable = skl_dc5_power_well_off,
+	.disable = skl_dc5_power_well_on,
+	.is_enabled = skl_dc_power_well_enabled,
+};
+
+static const struct i915_power_well_ops skl_dc6_state_ops = {
+	.sync_hw = skl_dc_power_well_sync_hw,
+	/* To enable power we turn the DC state off */
+	.enable = skl_dc6_power_well_off,
+	.disable = skl_dc6_power_well_on,
+	.is_enabled = skl_dc_power_well_enabled,
+};
+
 static struct i915_power_well hsw_power_wells[] = {
 	{
 		.name = "always-on",
@@ -1712,6 +1730,12 @@ static struct i915_power_well skl_power_wells[] = {
 		.domains = SKL_DISPLAY_MISC_IO_POWER_DOMAINS,
 		.ops = &skl_power_well_ops,
 		.data = SKL_DISP_PW_MISC_IO,
+	},
+	{
+		.name = "DC6 off",
+		.domains = SKL_DISPLAY_DC6_OFF_POWER_DOMAINS,
+		.ops = &skl_dc6_state_ops,
+		.data = DC_STATE_EN_UPTO_DC6,
 	},
 	{
 		.name = "power well 2",
